--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 
 <body>
     <main>
+        <!-- // first task -->
         <ul id="categories">
             <li class="item">
                 <h2>Animals</h2>
@@ -39,9 +41,28 @@
                 </ul>
             </li>
         </ul>
+        <!-- // second task -->
         <ul id="ingredients"></ul>
+        <!-- // third task -->
+        <ul class="gallery"></ul>
+        <!-- fourth task -->
+        <div id="counter">
+            <button type="button" data-action="decrement">-1</button>
+            <span id="value">0</span>
+            <button type="button" data-action="increment">+1</button>
+        </div>
+        <!-- fifth task -->
+        <input type="text" id="name-input" placeholder="Please enter your name" />
+        <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
+        <!-- sixth task -->
+        <input type="text" id="validation-input" data-length="6" placeholder="Please enter 6 symbols" />
     </main>
-    <script src="./js/firsttask.js"></script>
+    <!-- <script src="./js/firsttask.js"></script>
+    <script src="./js/secondtask.js"></script> -->
+    <!-- <script src="./js/thirdtask.js"></script> -->
+    <!-- <script src="./js/fourthtask.js"></script> -->
+    <!-- <script src="./js/fifthtask.js"></script> -->
+    <script src="./js/sixthtask.js"></script>
 </body>
 
 </html>
