--- a/index.html
+++ b/index.html
@@ -56,13 +56,31 @@
         <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
         <!-- sixth task -->
         <input type="text" id="validation-input" data-length="6" placeholder="Please enter 6 symbols" />
+        <!-- seventh task -->
+        <input id="font-size-control" type="range" min="16" max="96" />
+        <br />
+        <span id="text">Abracadabra!</span>
+        <!-- eigth task -->
+        <form class="login-form">
+            <label>
+                Email
+                <input type="email" name="email" />
+            </label>
+            <label>
+                Password
+                <input type="password" name="password" />
+            </label>
+            <button type="submit">Login</button>
+        </form>
     </main>
     <!-- <script src="./js/firsttask.js"></script>
     <script src="./js/secondtask.js"></script> -->
     <!-- <script src="./js/thirdtask.js"></script> -->
     <!-- <script src="./js/fourthtask.js"></script> -->
     <!-- <script src="./js/fifthtask.js"></script> -->
-    <script src="./js/sixthtask.js"></script>
+    <!-- <script src="./js/sixthtask.js"></script> -->
+    <!-- <script src="./js/seventhtask.js"></script> -->
+    <script src="./js/eigthtask.js"></script>
 </body>
 
 </html>
