--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-- <script src="./js/thirdtask.js"></script> -->
     <!-- <script src="./js/fourthtask.js"></script> -->
     <!-- <script src="./js/fifthtask.js"></script> -->
-    <!-- <script src="./js/sixthtask.js"></script> -->
+    <script src="./js/sixthtask.js"></script>
     <!-- <script src="./js/seventhtask.js"></script> -->
     <script src="./js/eigthtask.js"></script>
 </body>
