--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <!-- // first task -->
-        <ul id="categories">
+        <!-- <ul id="categories">
             <li class="item">
                 <h2>Animals</h2>
                 <ul>
@@ -42,26 +42,26 @@
             </li>
         </ul>
         <!-- // second task -->
-        <ul id="ingredients"></ul>
+        <!-- <ul id="ingredients"></ul>
         <!-- // third task -->
-        <ul class="gallery"></ul>
+        <!-- <ul class="gallery"></ul> -->
         <!-- fourth task -->
-        <div id="counter">
+        <!-- <div id="counter">
             <button type="button" data-action="decrement">-1</button>
             <span id="value">0</span>
             <button type="button" data-action="increment">+1</button>
-        </div>
+        </div> -->
         <!-- fifth task -->
-        <input type="text" id="name-input" placeholder="Please enter your name" />
-        <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
+        <!-- <input type="text" id="name-input" placeholder="Please enter your name" />
+        <h1>Hello, <span id="name-output">Anonymous</span>!</h1> -->
         <!-- sixth task -->
-        <input type="text" id="validation-input" data-length="6" placeholder="Please enter 6 symbols" />
+        <!-- <input type="text" id="validation-input" data-length="6" placeholder="Please enter 6 symbols" /> -->
         <!-- seventh task -->
-        <input id="font-size-control" type="range" min="16" max="96" />
+        <!-- <input id="font-size-control" type="range" min="16" max="96" />
         <br />
-        <span id="text">Abracadabra!</span>
+        <span id="text">Abracadabra!</span> -->
         <!-- eigth task -->
-        <form class="login-form">
+        <!-- <form class="login-form">
             <label>
                 Email
                 <input type="email" name="email" />
@@ -71,16 +71,22 @@
                 <input type="password" name="password" />
             </label>
             <button type="submit">Login</button>
-        </form>
+        </form> -->
+        <!-- nineth task -->
+        <div class="widget">
+            <p>Background color: <span class="color">-</span></p>
+            <button type="button" class="change-color">Change color</button>
+        </div>
     </main>
     <!-- <script src="./js/firsttask.js"></script>
     <script src="./js/secondtask.js"></script> -->
     <!-- <script src="./js/thirdtask.js"></script> -->
     <!-- <script src="./js/fourthtask.js"></script> -->
     <!-- <script src="./js/fifthtask.js"></script> -->
-    <script src="./js/sixthtask.js"></script>
+    <!-- <script src="./js/sixthtask.js"></script> -->
     <!-- <script src="./js/seventhtask.js"></script> -->
-    <script src="./js/eigthtask.js"></script>
+    <!-- <script src="./js/eigthtask.js"></script> -->
+    <script src="./js/ninethtask.js"></script>
 </body>
 
 </html>
