--- a/index.html
+++ b/index.html
@@ -73,10 +73,25 @@
             <button type="submit">Login</button>
         </form> -->
         <!-- nineth task -->
-        <div class="widget">
+        <!-- <div class="widget">
             <p>Background color: <span class="color">-</span></p>
             <button type="button" class="change-color">Change color</button>
+        </div> -->
+        <!-- tenth task -->
+        <div id="controls">
+            <input type="number" min="1" max="100" step="1" />
+            <button type="button" data-create>Create</button>
+            <button type="button" data-destroy>Destroy</button>
         </div>
+
+        <div id="boxes"></div>
+        <!-- <div id="controls">
+            <input type="number" min="0" max="100" step="1" />
+            <button type="button" data-action="render">Создать</button>
+            <button type="button" data-action="destroy">Очистить</button>
+        </div>
+
+        <div id="boxes"></div> -->
     </main>
     <!-- <script src="./js/firsttask.js"></script>
     <script src="./js/secondtask.js"></script> -->
@@ -86,7 +101,8 @@
     <!-- <script src="./js/sixthtask.js"></script> -->
     <!-- <script src="./js/seventhtask.js"></script> -->
     <!-- <script src="./js/eigthtask.js"></script> -->
-    <script src="./js/ninethtask.js"></script>
+    <!-- <script src="./js/ninethtask.js"></script> -->
+    <script src="./js/tenth.js"></script>
 </body>
 
 </html>
