--- a/index.html
+++ b/index.html
@@ -78,17 +78,10 @@
             <button type="button" class="change-color">Change color</button>
         </div> -->
         <!-- tenth task -->
-        <div id="controls">
+        <!-- <div id="controls">
             <input type="number" min="1" max="100" step="1" />
             <button type="button" data-create>Create</button>
             <button type="button" data-destroy>Destroy</button>
-        </div>
-
-        <div id="boxes"></div>
-        <!-- <div id="controls">
-            <input type="number" min="0" max="100" step="1" />
-            <button type="button" data-action="render">Создать</button>
-            <button type="button" data-action="destroy">Очистить</button>
         </div>
 
         <div id="boxes"></div> -->
@@ -102,7 +95,7 @@
     <!-- <script src="./js/seventhtask.js"></script> -->
     <!-- <script src="./js/eigthtask.js"></script> -->
     <!-- <script src="./js/ninethtask.js"></script> -->
-    <script src="./js/tenth.js"></script>
+    <!-- <script src="./js/tenth.js"></script> -->
 </body>
 
 </html>
