--- a/index.html
+++ b/index.html
@@ -11,38 +11,19 @@
 
 <body>
     <main>
-        <!-- // first task -->
-        <ul id="categories">
-            <li class="item">
-                <h2>Animals</h2>
-                <ul>
-                    <li>Cat</li>
-                    <li>Hamster</li>
-                    <li>Horse</li>
-                    <li>Parrot</li>
-                </ul>
-            </li>
-            <li class="item">
-                <h2>Products</h2>
-                <ul>
-                    <li>Bread</li>
-                    <li>Prasley</li>
-                    <li>Cheese</li>
-                </ul>
-            </li>
-            <li class="item">
-                <h2>Technologies</h2>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>React</li>
-                    <li>Node.js</li>
-                </ul>
-            </li>
+        <ul>
+            <li><a href="./task01.html">1</a></li>
+            <li><a href="./task02.html">2</a></li>
+            <li><a href="./task03.html">3</a></li>
+            <li><a href="./task04.html">4</a></li>
+            <li><a href="./task05.html">5</a></li>
+            <li><a href="./task06.html">6</a></li>
+            <li><a href="./task07.html">7</a></li>
+            <li><a href="./task08.html">8</a></li>
+            <li><a href="./task09.html">9</a></li>
+            <li><a href="./task10.html">10</a></li>
         </ul>
     </main>
-    <script src="../js/firsttask.js"></script>
 </body>
 
 </html>
