--- a/task01.html
+++ b/task01.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css" />
-    <title>Document</title>
+    <title>1</title>
 </head>
 
 <body>
+    <p><a href="index.html">На главную</a></p>
+
     <!-- // first task -->
     <ul id="categories">
         <li class="item">
