--- a/task04.html
+++ b/task04.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
-    <title>Document</title>
+    <title>4</title>
 </head>
 
 <body>
+    <p><a href="index.html">На главную</a></p>
     <!-- fourth task -->
     <div id="counter">
         <button type="button" data-action="decrement">-1</button>
