--- a/task06.html
+++ b/task06.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
-    <title>Document</title>
+    <title>6</title>
 </head>
 
 <body>
+    <p><a href="index.html">На главную</a></p>
     <!-- sixth task -->
     <input type="text" id="validation-input" data-length="6" placeholder="Please enter 6 symbols" />
     <script src="../js/sixthtask.js"></script>
