--- a/task08.html
+++ b/task08.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
-    <title>Document</title>
+    <title>8</title>
 </head>
 
 <body>
+    <p><a href="index.html">На главную</a></p>
     <!-- eigth task -->
     <form class="login-form">
         <label>
