--- a/task10.html
+++ b/task10.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css">
-    <title>Document</title>
+    <title>10</title>
 </head>
 
 <body>
+    <p><a href="index.html">На главную</a></p>
     <!-- tenth task -->
     <div id="controls">
         <input type="number" min="1" max="100" step="1" />
