--- a/task01.html
+++ b/task01.html
@@ -42,7 +42,7 @@
             </ul>
         </li>
     </ul>
-    <script src="../js/firsttask.js"></script>
+    <script src="../js/firsttask.js" type="module"></script>
 </body>
 
 </html>
