--- a/task01.html
+++ b/task01.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="index.html">На головну</a></p>
 
     <!-- // first task -->
     <ul id="categories">
