--- a/task01.html
+++ b/task01.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <p><a href="index.html">На головну</a></p>
+    <p><a href="index.html">На главную</a></p>
 
     <!-- // first task -->
     <ul id="categories">
@@ -42,7 +42,7 @@
             </ul>
         </li>
     </ul>
-    <script src="../js/firsttask.js" type="module"></script>
+    <script src="./js/firsttask.js"></script>
 </body>
 
 </html>
