--- a/task03.html
+++ b/task03.html
@@ -13,7 +13,7 @@
     <p><a href="index.html">На главную</a></p>
     <!-- // third task -->
     <ul class="gallery"></ul>
-    <script src="../js/thirdtask.js"></script>
+    <script src="./js/thirdtask.js"></script>
 </body>
 
 </html>
