--- a/task04.html
+++ b/task04.html
@@ -17,7 +17,7 @@
         <span id="value">0</span>
         <button type="button" data-action="increment">+1</button>
     </div>
-    <script src="../js/fourthtask.js"></script>
+    <script src="./js/fourthtask.js"></script>
 </body>
 
 </html>
