--- a/task06.html
+++ b/task06.html
@@ -13,7 +13,7 @@
     <p><a href="index.html">На главную</a></p>
     <!-- sixth task -->
     <input type="text" id="validation-input" data-length="6" placeholder="Please enter 6 symbols" />
-    <script src="../js/sixthtask.js"></script>
+    <script src="./js/sixthtask.js"></script>
 </body>
 
 </html>
