--- a/task08.html
+++ b/task08.html
@@ -23,7 +23,7 @@
         </label>
         <button type="submit">Login</button>
     </form>
-    <script src="../js/eigthtask.js"></script>
+    <script src="./js/eigthtask.js"></script>
 </body>
 
 </html>
