--- a/task09.html
+++ b/task09.html
@@ -16,7 +16,7 @@
         <p>Background color: <span class="color">-</span></p>
         <button type="button" class="change-color">Change color</button>
     </div>
-    <script src="../js/ninethtask.js"></script>
+    <script src="./js/ninethtask.js"></script>
 </body>
 
 </html>
