--- a/task10.html
+++ b/task10.html
@@ -19,7 +19,7 @@
     </div>
 
     <div id="boxes"></div>
-    <script src="../js/tenth.js"></script>
+    <script src="./js/tenth.js"></script>
 </body>
 
 </html>
