--- a/task02.html
+++ b/task02.html
@@ -13,7 +13,7 @@
     <p><a href="index.html">На главную</a></p>
     <!-- // second task -->
     <ul id="ingredients"></ul>
-    <script src="../js/secondtask.js"></script>
+    <script src="./js/secondtask.js"></script>
 </body>
 
 </html>
