--- a/task05.html
+++ b/task05.html
@@ -14,7 +14,7 @@
     <!-- fifth task -->
     <input type="text" id="name-input" placeholder="Please enter your name" />
     <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
-    <script src="../js/fifthtask.js"></script>
+    <script src="./js/fifthtask.js"></script>
 </body>
 
 </html>
