--- a/task07.html
+++ b/task07.html
@@ -15,7 +15,7 @@
     <input id="font-size-control" type="range" min="16" max="96" />
     <br />
     <span id="text">Abracadabra!</span>
-    <script src="../js/seventhtask.js"></script>
+    <script src="./js/seventhtask.js"></script>
 </body>
 
 </html>
