--- a/task06.html
+++ b/task06.html
@@ -5,8 +5,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
     <title>6</title>
+    <style>
+        #validation-input {
+            border: 3px solid #bdbdbd;
+        }
+
+        #validation-input.valid {
+            border-color: #4caf50;
+        }
+
+        #validation-input.invalid {
+            border-color: #f44336;
+        }
+    </style>
 </head>
 
 <body>
