--- a/task03.html
+++ b/task03.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="index.html">To Back</a></p>
     <!-- // third task -->
     <ul class="gallery"></ul>
     <script src="./js/thirdtask.js"></script>
