--- a/task06.html
+++ b/task06.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="index.html">To Back</a></p>
     <!-- sixth task -->
     <input type="text" id="validation-input" data-length="6" placeholder="Please enter 6 symbols" />
     <script src="./js/sixthtask.js"></script>
