--- a/task09.html
+++ b/task09.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="index.html">To Back</a></p>
     <!-- nineth task -->
     <div class="widget">
         <p>Background color: <span class="color">-</span></p>
