--- a/task01.html
+++ b/task01.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="index.html">To Back</a></p>
 
     <!-- // first task -->
     <ul id="categories">
