--- a/task02.html
+++ b/task02.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="index.html">To Back</a></p>
     <!-- // second task -->
     <ul id="ingredients"></ul>
     <script src="./js/secondtask.js"></script>
