--- a/task04.html
+++ b/task04.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="index.html">To Back</a></p>
     <!-- fourth task -->
     <div id="counter">
         <button type="button" data-action="decrement">-1</button>
