--- a/task07.html
+++ b/task07.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="index.html">To Back</a></p>
     <!-- seventh task -->
     <input id="font-size-control" type="range" min="16" max="96" />
     <br />
