--- a/task08.html
+++ b/task08.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="index.html">To Back</a></p>
     <!-- eigth task -->
     <form class="login-form">
         <label>
