--- a/task10.html
+++ b/task10.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="index.html">To Back</a></p>
     <!-- tenth task -->
     <div id="controls">
         <input type="number" min="1" max="100" step="1" />
